- All tools stuff refactored in various files/components. - Added classes: IToolLoop, Tool, ToolGroup, ToolInk, ToolController, ToolPointShape, ToolIntertwine, ToolBox, etc. - Added ToolLoopManager. - Removed old src/modules/tools.cpp. - Added ISettings and UISettingsImpl, adding the tools settings (onion skinning, grid, tiled mode, etc.). - Added App::PenSizeBeforeChange, PenSizeAfterChange, CurrentToolChange signals. - Renamed Context::get_bg/fg_color to getBg/FgColor. - Refactored Brush class to Pen and added PenType. - Renamed tiled_t to TiledMode. - get_config_rect now uses the new Rect class imported from Vaca instead of old jrect. - Added default_skin.xml to load tool icons. - Added pen preview in Editor::cursor stuff. - Added Editor::decorators.
Note: This big patch is from some time ago. I did my best to pre-commit other small changes before this big one.

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -5,9 +5,19 @@ NEWS
 0.8
 ---
 
++ IMPORTANT USER INTERFACE CHANGES!
+  - Now you zoom using the mouse wheel without pressing Alt key.
+  - Now tools are grouped.
+  - New ASE skin created by Ilija Melentijevic.
++ New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
+  an independet tool instead of Alt+click shortcut), Hand, Move,
+  (Filled) Countour, and (Filled) Polygon.
++ Now the editor cursor displays pen preview (Ilija Melentijevic
+  idea, like Animator Pro).
++ Added support to zoom when you are drawing (e.g. you can use the
+  wheel mouse when you are drawing a polygon or a long line).
 + Added support to resize and maximize the main window (only in
   Windows platform).
-+ New ASE skin created by Ilija Melentijevic.
 
 0.7.2
 -----
