--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-03-07  David Capello  <davidcapello@gmail.com>
+
+	* src/tools: All tools stuff refactored in various files/components. Added
+	classes: IToolLoop, Tool, ToolGroup, ToolInk, ToolController, ToolPointShape,
+	ToolIntertwine, ToolBox, etc.
+	(Removed old src/modules/tools.cpp)
+
 2010-01-29  David Capello  <davidcapello@gmail.com>
 
 	* src/app.cpp (Modules): A lot of modules converted to classes.
