--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
 Refactoring
 -----------
 
+- Separate the source code in independent libraries:
+  1) jinete -> third_party/vaca (it has the core for mutex/threads)
+  2) sprite-core
+  3) file-io
+  4) undo
+  5) aseprite
 - editors_ -> Editors class widget
 - rename core/cfg.h to cfg_file.h
 - convert all widgets to classes:
