--- a/NEWS.txt
+++ b/NEWS.txt
@@ -6,14 +6,16 @@ NEWS
 -----
 
 + IMPORTANT USER INTERFACE CHANGES!
+  - New ASE skin created by Ilija Melentijevic.
   - Now you zoom using the mouse wheel without pressing Alt key.
   - Now tools are grouped.
-  - New ASE skin created by Ilija Melentijevic.
+  - Color-bar is completely redesigned.
 + New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
-  an independet tool instead of Alt+click shortcut), Hand, Move,
+  an independet tool, Alt+click is available too), Hand, Move,
   (Filled) Countour, and (Filled) Polygon.
 + Now the editor cursor displays pen preview (Ilija Melentijevic
   idea, like Animator Pro).
++ Added compression to .ase/.aseprite format.
 + Added support to zoom when you are drawing (e.g. you can use the
   wheel mouse when you are drawing a polygon or a long line).
 + Added support to resize and maximize the main window (only in
