Improved pixel-movement: Added support for continuos movement even when we release the mouse button. The mouse is captured by the editor until the user presses a key (e.g. to execute a command) or uses the selection tool to add/subtract chunks of mask. While the mouse is captured we are in the "pixels movement" loop.

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -10,6 +10,8 @@ NEWS
   - Now you zoom using the mouse wheel without pressing Alt key.
   - Now tools are grouped.
   - Color-bar is completely redesigned.
+  - Improved selection tools: Now you can move selected pixels
+    dragging the selected area (like MS Paint).
 + New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
   an independet tool, Alt+click is available too), Hand, Move,
   (Filled) Countour, and (Filled) Polygon.
