--- a/NEWS.txt
+++ b/NEWS.txt
@@ -2,8 +2,8 @@
 NEWS
 ===================================
 
-0.8.0
------
+0.8.0 beta
+----------
 
 + IMPORTANT USER INTERFACE CHANGES!
   - New ASE skin created by Ilija Melentijevic.
@@ -11,7 +11,7 @@ NEWS
   - Now tools are grouped.
   - Color-bar is completely redesigned.
   - Improved selection tools: Now you can move selected pixels
-    dragging the selected area (like MS Paint).
+    dragging the selected area (like MS Paint). [work-in-progress]
 + New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
   an independet tool, Alt+click is available too), Hand, Move,
   (Filled) Countour, and (Filled) Polygon.
