--- a/NEWS.txt
+++ b/NEWS.txt
@@ -5,13 +5,19 @@ NEWS
 0.8.0 beta
 ----------
 
-+ IMPORTANT USER INTERFACE CHANGES!
-  - New ASE skin created by Ilija Melentijevic.
++ USER INTERFACE CHANGES
   - Now you zoom using the mouse wheel without pressing Alt key.
   - Now tools are grouped.
-  - Color-bar is completely redesigned.
+  - Color-bar is completely redesigned (see Quick Reference).
   - Improved selection tools: Now you can move selected pixels
     dragging the selected area (like MS Paint). [work-in-progress]
+  - New ASE skin created by Ilija Melentijevic.
+  - "Tools" menu is gone:
+    - "Tools > Configure" was moved to "Edit > Tools".
+    - "Tools > Options" was moved to "Edit > Options".
+    - "Tools > FX" was moved to "Edit > FX".
+    - All other options are in "View" (Animation Editor,
+      Palette Editor).
 + New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
   an independet tool, Alt+click is available too), Hand, Move,
   (Filled) Countour, and (Filled) Polygon.
