Minor fix in NEWS.

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -9,8 +9,8 @@ NEWS
   for the current tool.
 + Added "Tolerance" parameter to Magic Wand and Paint Bucket (Trent
   Gamblin idea).
-+ Critical problem rendering indexed images with a non-black color in
-  palette entry 0.
++ Fixed critical problem rendering indexed images with a non-black
+  color in palette entry 0.
 
 0.8.0 beta
 ----------
