Update NEWS.txt with changes in 0.8.2 release (0.8 branch).

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -2,11 +2,19 @@
 NEWS
 ===================================
 
-0.8.2 beta
-----------
+0.9
+---
 
 + Added support to resize the window in X11, Mac OS X, and Windows
   platforms.
+
+0.8.2
+-----
+
++ Fixed a critical bug: split an editor, close it, and change tool (crash).
++ Fixed Paste command when we use it in an empty frame.
++ Fixed bug #3051174 (reported by Trent Gamblin): Loading two or
+  more times gui.xml file.
 
 0.8.1 beta
 ----------
