--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 For next release
 ----------------
 
-+ Mini-look for sliders in palette editor (add ISliderBackground to draw RGB/HSV sliders
-  with a customized background).
++ Add Widget::setDoubleBuffered(bool) to double-buffer some widgets
+  when ji_screen==real screen (palette editor sliders must contain
+  this attribute on).
 + Fix palette editor to avoid generating a lot of consecutive Undo actions.
 + Move "effect/images_ref" to "raster" and refactor it to a class.
 + Convert jaccel::key_list to std::vector<>
