--- a/TODO.txt
+++ b/TODO.txt
@@ -16,10 +16,8 @@ For next release
 + Move launcher.cpp to base/ lib adding an extension point for "gui" lib.
 + Remove src/dialogs/repo,playfli,drawtext.
 + Move src/dialogs/aniedit,filesel to src/widgets (remove dialogs/ directory).
-+ Move everything from src/app/ to src/
-+ Move everything from src/core/ to src/
 + Merge everything related to configuration/settings in one class
-  (admit configuration per file). Use cfg.cpp and settings/ dir.
+  (allow configuration per document). Use cfg.cpp and settings/ dir.
 
 Refactoring
 -----------
@@ -81,10 +79,6 @@ Wish-list
 
 - dacap wish-list:
   + added starred file-items in the file-selector.
-  + the commands should use a new ase/ API and not the raster/ low-level
-    - "raster/Undoable" is the beginning
-  + the dependencies should be:
-    commands/ -> ase/ -> raster/ -> jinete/
 - manuq wish-list:
   + layer-with-constant-cel
 - Mateusz Czaplinski ideas:
@@ -107,8 +101,3 @@ Low priority stuff
 - optimize the *_to_allegro image methods (I profiled ASE, and these
   are the more slow routines in all the program);
 - remove the jquickmenu.c
-- fix Jinete examples:
-  + 05fsel
-  + 09lists
-  + 20combo
-  + 21manage
