--- a/TODO.txt
+++ b/TODO.txt
@@ -27,6 +27,8 @@ For next release
 Refactoring
 -----------
 
+- About Signals/Slots: Add some field in slots to avoid disconnecting
+  them from dead signals.
 - Eradicate JList.
 - Replace JRect & jrect with gfx::Rect.
 - Create gfx::Region to replace JRegion & jregion.
